# rentsomehash

./: README.md  justfile
api/: .gitignore  Cargo.toml  wrangler.toml
api/src/: cache.rs  calculator.rs  http.rs  lib.rs  market.rs  query.rs  types.rs
api/src/market/: braiins.rs  ocean.rs  validation.rs
content/guides/: braiins-ocean.md  startos.md  umbrel.md  vps.md
content/pages/: home.md
web/: .gitignore  .prettierignore  README.md  astro.config.mjs  package-lock.json  package.json  worker.js  wrangler.toml
web/public/: _headers
web/src/: content.config.ts
web/src/components/: Footer.astro  GuideListItem.astro  HashpowerCalculator.tsx  Header.astro  ThemeToggle.tsx  WarningsAccordion.tsx
web/src/components/ui/: accordion.tsx  button.tsx  input.tsx  slider.tsx  tooltip.tsx
web/src/layouts/: SiteLayout.astro
web/src/lib/: content.ts
web/src/og/: README.md  og.config.tsx
web/src/og/cards/: braiins-ocean.tsx  calculator.tsx  guide-card.tsx  startos.tsx  umbrel.tsx  vps.tsx
web/src/pages/: 404.astro  calculator.astro  index.astro
web/src/pages/guides/: [slug].astro
web/src/styles/: global.css
web/worker-rs/: Cargo.toml
web/worker-rs/src/: cache.rs  calculator.rs  lib.rs  market.rs  types.rs
