[package]
name = "rentsomehash-worker"
version = "0.1.0"
edition = "2024"
authors = ["Praveen Perera"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blake3 = "1.8.2"
futures = "0.3.32"
js-sys = "0.3.94"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ts-rs = "12.0.1"
url = "2.5.8"
worker = "0.7.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.54"
